syntax = "proto2";

package APP_SERVER_NET_Protocol;



// App Request Server
// App 向服务器请求的协议编号
enum APP2S
{
	app2s_login						= 0;	// 客户端向服务器请求登陆
	app2s_request_slope_list		= 1;	// app向服务器请求边坡列表
	app2s_request_sensor_list		= 2;	// app向服务器请求传感器列表
	app2s_request_sensor_history	= 3;	// app向服务器请求传感器在一定时间段内的数据
	app2s_ping						= 4;	// 定时ping server，以保持连接
	app2s_request_all_list			= 5;	// 请求所有的slope和senser数据
	app2s_add_slope					= 6;	// 增加一个新的边坡
	app2s_del_slope					= 7;	// 删除指定ID的边坡
	app2s_update_slope_data			= 8;	// 修改指定ID的边坡数据
	app2s_add_sensor				= 9;	// 增加一个新的传感器
	app2s_del_sensor				= 10;	// 删除指定ID的传感器
	app2s_update_sensor_data		= 11;	// 修改指定ID的传感器数据
	app2s_modify_password			= 12;	// 修改密码
	app2s_find_slope				= 13;	// 查找指定的边坡
	app2s_find_sensor				= 14;	// 查找指定的传感器

	app2s_max						= 256;	// 最大协议号
}



// App Request Struct
// 客户端请求协议对应的数据结构

// 客户端向服务器请求登陆
message App2S_Login
{ 
	required bytes	account			= 1;	// 账号
	required bytes	password		= 2;	// 密码
}

// app向服务器请求边坡列表
message APP2S_Request_Slope_List
{
	required uint32 server_id		= 1;	// 服务器ID
}

// app向服务器请求传感器列表
message APP2S_Request_Sensor_List
{
	required uint32 slope_id		= 1;	// 边坡ID
	required uint32 sensor_type		= 2;	// 传感器类型
}

// app向服务器请求传感器在一定时间段内的数据
message APP2S_Request_Sensor_History
{
	required uint32 sensor_id		= 1;	// 传感器ID
	required uint32 begin_time		= 2;	// 开始时间
	required uint32 end_time		= 3;	// 结束时间
}

// app向服务器请求增加一个新的边坡
message APP2S_Add_Slope
{
	required uint32	type			= 1;	// 类型
	required bytes	name			= 2;	// 名称
	required double	longitude		= 3;	// 经度
	required double	latitude		= 4;	// 纬度
	required bytes	url				= 5;	// 边坡视频的url
	required uint32	scene_id		= 6;	// 现场ID
}

// app向服务器请求删除指定ID的边坡
message APP2S_Del_Slope
{
	required uint32	id				= 1;	// 边坡ID
}

// app向服务器请求修改指定ID的边坡数据
message APP2S_Update_Slope_Data
{
	required uint32	id				= 1;	// 边坡ID
	required uint32	type			= 2;	// 类型
	required bytes	name			= 3;	// 名称
	required double	longitude		= 4;	// 经度
	required double	latitude		= 5;	// 纬度
	required bytes	url				= 6;	// 边坡视频的url
	required uint32	scene_id		= 7;	// 现场ID
}

// app向服务器请求增加一个新的传感器
message APP2S_Add_Sensor
{
	required uint32	type			= 1;	// 类型
	required uint32	slope_id		= 2;	// 所属边坡ID
	required double	longitude		= 3;	// 经度
	required double	latitude		= 4;	// 纬度
	required bytes	url				= 5;	// 特殊传感器类型的url
	required bytes	description		= 6;	// 安装位置的描述
	required uint32	scene_id		= 7;	// 现场ID
}

// app向服务器请求删除指定ID的传感器
message APP2S_Del_Sensor
{
	required uint32	id				= 1;	// 传感器ID
}

// app向服务器请求修改指定ID的传感器数据
message APP2S_Update_Sensor_Data
{
	required uint32	id				= 1;	// 传感器ID
	required uint32	type			= 2;	// 类型
	required uint32	slope_id		= 3;	// 所属边坡ID
	required double	longitude		= 4;	// 经度
	required double	latitude		= 5;	// 纬度
	required bytes	url				= 6;	// 特殊传感器类型的url
	required bytes	description		= 7;	// 安装位置的描述
	required uint32	scene_id		= 8;	// 现场ID
}

// 修改密码
message APP2S_Modify_Password
{
	required bytes	account			= 1;	// 账号
	required bytes	new_password	= 2;	// 新密码
}

// 查找指定的边坡
message APP2S_Find_Slope
{
	required uint32	slope_id		= 1;	// 边坡ID
	required bytes	slope_name		= 2;	// 边坡名
}

// 查找指定的传感器
message APP2S_Find_Sensor
{
	required uint32	slope_id		= 1;	// 边坡ID
	required bytes	slope_name		= 2;	// 边坡名
	required uint32	sensor_id		= 3;	// 传感器ID
	required uint32	sensor_type		= 4;	// 传感器类型
}







// Server Respond App
// 服务器回应App请求的协议编号
enum S2APP
{
	s2app_login_result				= 0;	// 登陆结果
	s2app_slope_list				= 1;	// 边坡列表
	s2app_sensor_list				= 2;	// 传感器列表
	s2app_sensor_history			= 3;	// 传感器历史数据
	s2app_all_list_end				= 4;	// 所有边坡和传感器数据发送完毕
	s2app_error						= 5;	// 有错误时返回对应的值
	s2app_new_slope					= 6;	// 添加边坡
	s2app_del_slope					= 7;	// 删除边坡
	s2app_update_slope				= 8;	// 更新边坡数据
	s2app_add_sensor				= 9;	// 添加传感器
	s2app_del_sensor				= 10;	// 删除传感器
	s2app_update_sensor				= 11;	// 更新传感器数据
	s2app_modify_password_result	= 12;	// 修改密码结果

	s2app_max						= 256;	// 最大协议号
}

// Server Respond Protocol Struct
// 服务器回应App协议对应的数据结构

// 登陆结果
message S2App_Login_Result
{
	message ServerData
	{
		required uint32 id			= 1;	// 服务器ID
		required bytes	ip			= 2;	// 服务器IP
		required uint32	port		= 3;	// 服务器端口号
	}

	required uint32	result			= 1;	// 登陆结果：0，登陆成功；1，帐号或者密码错误；
	repeated ServerData	server_list	= 2;	// 服务器列表数据
}

// 边坡列表
message S2App_Slope_List
{
	message SlopeData
	{// 边坡数据结构
		required uint32	id			= 1;	// ID
		required uint32	type		= 2;	// 类型
		required bytes	name		= 3;	// 名称
		required uint32	state		= 4;	// 预警状态
		required double	longitude	= 5;	// 经度
		required double	latitude	= 6;	// 纬度
		optional bytes	url			= 7;	// 边坡视频的url
		optional uint32	scene_id	= 8;	// 现场ID
	}

	repeated SlopeData	slope_list	= 1;
}

// 传感器列表
message S2App_Sensor_List
{
	message SensorData
	{// 传感器器数据结构
		required uint32	id				= 1;	// ID
		required uint32	type			= 2;	// 类型
		required uint32	state			= 3;	// 预警状态
		required uint32	slope_id		= 4;	// 所属边坡ID
		required double	longitude		= 5;	// 经度
		required double	latitude		= 6;	// 纬度
		required double	cur_value1		= 7;	// 当前物理量1
		required double	cur_value2		= 8;	// 当前物理量2
		required double	cur_value3		= 9;	// 当前物理量3
		required double	avg_value1		= 10;	// 平均物理量1
		required double	avg_value2		= 11;	// 平均物理量2
		required double	avg_value3		= 12;	// 平均物理量3
		required double	offset_value1	= 13;	// 平均物理量1
		required double	offset_value2	= 14;	// 平均物理量2
		required double	offset_value3	= 15;	// 平均物理量3
		required bytes	url				= 16;	// 特殊传感器类型的url
		required bytes	description		= 17;	// 安装位置的描述
		required uint32	scene_id		= 18;	// 现场ID
	}

	repeated SensorData	sensor_list	= 1;
}

// 传感器历史数据
message S2App_Sensor_History
{
	message SensorData
	{//传感器数据
		required double	min_value1			= 1;	// 最小物理量1
		required double	min_value2			= 2;	// 最小物理量2
		required double	min_value3			= 3;	// 最小物理量3
		required double	max_value1			= 4;	// 最大物理量1
		required double	max_value2			= 5;	// 最大物理量2
		required double	max_value3			= 6;	// 最大物理量3
		required double	min_offset_value1	= 7;	// 最小偏移量1
		required double	min_offset_value2	= 8;	// 最小偏移量2
		required double	min_offset_value3	= 9;	// 最小偏移量3
		required double	max_offset_value1	= 10;	// 最大偏移量1
		required double	max_offset_value2	= 11;	// 最大偏移量2
		required double	max_offset_value3	= 12;	// 最大偏移量3
	}

	required uint32 id					= 1;	// ID
	required double	longitude			= 2;	// 经度
	required double	latitude			= 3;	// 纬度
	required uint32 begin_time			= 4;	// 起始时间
	required uint32 end_time			= 5;	// 结束时间
	required uint32 invterval			= 6;	// 间隔时间
	required double	avg_value1			= 7;	// 平均物理量1
	required double	avg_value2			= 8;	// 平均物理量2
	required double	avg_value3			= 9;	// 平均物理量2
	repeated SensorData	history_list	= 10;	// 起始时间到结束时间内的传感器数据
	required uint32	scene_id			= 11;	// 现场ID
}

// 有错误时返回对应的值
message S2APP_ERROR
{
	required uint32 error_code			= 1;	// 错误值
}

// 添加边坡
message S2APP_New_Slope
{
	required uint32	id			= 1;	// ID
	required uint32	type		= 2;	// 类型
	required bytes	name		= 3;	// 名称
	required uint32	state		= 4;	// 预警状态
	required double	longitude	= 5;	// 经度
	required double	latitude	= 6;	// 纬度
	required bytes	url			= 7;	// 边坡视频的url
	required uint32	scene_id	= 8;	// 现场ID
}

// 删除边坡
message S2APP_Del_Slope
{
	required uint32	result		= 1;	// 删除结果
}

// 更新边坡数据
message S2APP_Update_Slope
{
	required uint32	id			= 1;	// ID
	required uint32	type		= 2;	// 类型
	required bytes	name		= 3;	// 名称
	required uint32	state		= 4;	// 预警状态
	required double	longitude	= 5;	// 经度
	required double	latitude	= 6;	// 纬度
	required bytes	url			= 7;	// 边坡视频的url
	required uint32	scene_id	= 8;	// 现场ID
}

// 添加传感器
message S2APP_Add_Sensor
{
	required uint32	id			= 1;	// ID
	required uint32	type		= 2;	// 类型
	required uint32	state		= 3;	// 预警状态
	required uint32	slope_id	= 4;	// 所属边坡ID
	required double	longitude	= 5;	// 经度
	required double	latitude	= 6;	// 纬度
	required bytes	url			= 7;	// 特殊传感器类型的url
	required bytes	description	= 8;	// 安装位置的描述
	required uint32	scene_id	= 9;	// 现场ID
}

// 删除传感器
message S2APP_Del_Sensor
{
	required uint32	result		= 1;	// 删除结果
}

// 更新传感器数据
message S2APP_Update_Sensor
{
	required uint32	id			= 1;	// ID
	required uint32	type		= 2;	// 类型
	required uint32	state		= 3;	// 预警状态
	required uint32	slope_id	= 4;	// 所属边坡ID
	required double	longitude	= 5;	// 经度
	required double	latitude	= 6;	// 纬度
	required bytes	url			= 7;	// 特殊传感器类型的url
	required bytes	description	= 8;	// 安装位置的描述
	required uint32	scene_id	= 9;	// 现场ID
}

// 修改密码结果
message S2APP_Modify_Password_Result
{
	required uint32	result			= 1;	// 修改结果
}
